--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
+<!-- metadata about the HTML doc as a whole -->
+
+</head>
+
+<body>
+
+<a href="https://flatironschool.com">Flatiron School of Worthlessness</a>
+</body>
+
+</html>te your HTML in this file -->
