--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<a href="https://flatironschool.com">Flatiron School of Worthlessness</a>
+<a href="https://flatironschool.com">Flatiron School</a>
 </body>
 
 </html>te your HTML in this file -->
